Blenderplayer segfaults after "BGE: Adding material IPO support to GLSL materials" #44700

Closed
opened 2015-05-13 21:37:13 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 8478c71a
Worked: The commit before ;)

Short description of error

Blender Game Engine (embed or Blenderplayer) crashes upon opening of attached file.

Exact steps for others to reproduce the error

I'm not sure how to create this file from scratch, but it's a really simple file (just a plane, created by an addon, maybe something went wrong while creating the plane?): bge-bug.blend

A provisory patch is here: P225

**Blender Version** Broken: 8478c71a Worked: The commit before ;) **Short description of error** Blender Game Engine (embed or Blenderplayer) crashes upon opening of attached file. **Exact steps for others to reproduce the error** I'm not sure how to create this file from scratch, but it's a really simple file (just a plane, created by an addon, maybe something went wrong while creating the plane?): [bge-bug.blend](https://archive.blender.org/developer/F174135/bge-bug.blend) A provisory patch is here: [P225](https://archive.blender.org/developer/P225.txt)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Mo was assigned by Dalai Felinto 2015-05-13 21:37:13 +02:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Mo was unassigned by Mitchell Stokes 2015-05-13 22:05:20 +02:00
Mitchell Stokes self-assigned this 2015-05-13 22:05:20 +02:00

This issue was referenced by 2fa4a48bce

This issue was referenced by 2fa4a48bcef05671890fafc3fe50a8fa619f0259

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2fa4a48bce.

Closed by commit 2fa4a48bce.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44700
No description provided.