BGE: Fix T44700 mesh without material in blenderplayer.

If a mesh doesn't have a material we don't initialize the mSavedData in KX_BlenderMaterial to avoid crash.